# travel-concierge-agent

./: .gitignore
BACKEND/travel_concierge_agent/: .env.example  README.md  cli.py  docker-compose.yml  pyproject.toml
BACKEND/travel_concierge_agent/app/agent/: __init__.py  _skill.py  runner.py
BACKEND/travel_concierge_agent/app/agent/accommodation/: SKILL.md  schema.json
BACKEND/travel_concierge_agent/app/agent/claim/: SKILL.md  __init__.py  schema.json
BACKEND/travel_concierge_agent/app/agent/compensation/: SKILL.md  schema.json
BACKEND/travel_concierge_agent/app/agent/disruption/: SKILL.md  schema.json
BACKEND/travel_concierge_agent/app/agent/identity/: SKILL.md  schema.json
BACKEND/travel_concierge_agent/app/agent/rebooking/: SKILL.md  schema.json
BACKEND/travel_concierge_agent/app/agent/summary/: SKILL.md  schema.json
BACKEND/travel_concierge_agent/app/api/: main.py
BACKEND/travel_concierge_agent/app/application/: intake.py
BACKEND/travel_concierge_agent/app/application/orchestrator/: __init__.py  persistence.py
BACKEND/travel_concierge_agent/app/application/workflow/: __init__.py
BACKEND/travel_concierge_agent/app/db/: connection.py  schema.sql  seed.sql
BACKEND/travel_concierge_agent/app/domain/: case_file.py  enums.py
BACKEND/travel_concierge_agent/app/llm/: __init__.py  claude_provider.py  cortex_provider.py
BACKEND/travel_concierge_agent/app/notifications/: __init__.py
BACKEND/travel_concierge_agent/app/tools/: __init__.py
BACKEND/travel_concierge_agent/app/utils/: constants.py  jsonx.py  serialize.py
FRONT_END/: README.md  (+4 more)
(+36 files in other folders)
