[project]
name = "travel-concierge-agent"
version = "1.0.0"
description = "Multi-agent flight-disruption recovery (DGCA / Indian aviation law)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # core
    "pydantic>=2.13",
    "python-dotenv>=1.2",
    "jsonschema>=4.23",
    "pyyaml>=6.0",
    # database (PostgreSQL 18)
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    # api
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # llm providers
    "openai>=2.43",          # Cortex (OpenAI-compatible gateway -> Gemini)
    "claude-agent-sdk>=0.2", # Claude (Claude Code auth, no API key)
    # notifications
    "twilio>=9.0",           # SMS updates to the customer
]

[tool.uv]
package = false
